fixed underline issue on h1 link in top nav, changed ngApp name to redrawism, reformatted code, html5 routing set to true => NO MORE /#/ linksgit status

--- a/css/screen.css
+++ b/css/screen.css
@@ -1022,7 +1022,9 @@ nav {
       display: block !important; }
       nav ul li {
         border-left: 0 !important; } }
-  nav a h1 {
+  nav a {
+    text-decoration: none; }
+  nav h1 {
     color: #181e20;
     text-decoration: none !important;
     border-bottom: 0 !important;
